--- a/wp-content/themes/theme-publicsource/less/_mixins.less
+++ b/wp-content/themes/theme-publicsource/less/_mixins.less
@@ -114,7 +114,7 @@
   color: @black;
   display: inline-block;
   width: auto;
-  text-align: left;
+  text-align: center;
   font-size: 1.3em;
 }
 
